# dictature

./: .gitignore  README.md  dictature-test-backends-compose.yml  pyproject.toml  run_tests_with_backends.py
.github/workflows/: pypi-deploy.yml
src/dictature/: dictature.py
src/dictature/backend/: __init__.py  baserow.py  confluence.py  misp.py  mock.py  mysql.py  single_table.py  webdav.py
src/sqlidictature/: __init__.py  indexedb.py
tests/: requirements.txt  test_operations.py
